--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "@mui/joy": "^5.0.0-beta.10",
     "@mui/material": "^5.14.13",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
-
     "bootstrap": "^5.3.1",
     "components": "^0.1.0",
     "firebase": "^10.3.1",
@@ -27,6 +25,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-router": "^6.16.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "react-slider": "^2.0.6",
@@ -57,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/bootstrap": "^5.2.6"
   }
 }
