--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
-
     "bootstrap": "^5.3.1",
     "components": "^0.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "enzyme-to-json": "^3.6.2",
     "firebase": "^10.3.1",
+    "jest": "^27.5.1",
     "joi": "^17.11.0",
     "mdb-react-ui-kit": "^6.2.0",
     "react": "^18.2.0",
